--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,4 @@
 buildscript {
-    ext {
-        compose_version = '1.1.1'
-    }
-
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
@@ -11,6 +7,7 @@ plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.github.ben-manes.versions' version '0.42.0'
 }
 
 task clean(type: Delete) {
